--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@ nada de estos lenguajes. Si quieres aprender luego, te recomendamos ver lo sigui
     <h1>¡Hola mundo!</h1>
   </body>
   <script>
-    // Aquí puedes dejar código JavasCript que se ejecutará cuando la página se cargue.
+    // Aquí puedes dejar código JavaScript que se ejecutará cuando la página se cargue.
     // Importante: no debes importar ningún script externo aquí.
     // Para eso, utiliza script src dentro del head.
   </script>
